--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -66,11 +66,14 @@ form .field-group {
 
 form input, form select {
     background-color: #f0f0f5;
+
     border: 0;  
+    border-radius: 8px;
+
     padding: 16px 24px;
+    
     font-size: 16px;
     outline: none;
-    border-radius: 8px;
 }
 
 form select {
@@ -91,16 +94,67 @@ form .field-group .field + .field {
 form button {
     width: 260px;
     height: 56px;
+    margin-top: 40px;
+
     background-color: var(--primary-color);
+    transition: background-color 400ms;
+    
     border-radius: 8px;
-    color: #ffffff;
+    border: 0;
+    
     font-weight: bold;
     font-size: 16px;
-    border: 0;
-    margin-top: 40px;
-    transition: background-color 400ms;
+    color: #ffffff;
+    
 }
 
 form button:hover {
     background-color: #2fb86e;
+}
+
+.items-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 16px;
+}
+
+.items-grid li {
+    background-color: #f5f5f5;
+    list-style: none;
+
+    border: 2px solid #f5f5f5;
+    border-radius: 8px;
+
+    height: 180px;
+
+    padding: 32px 24px 16px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    
+    text-align: center;
+
+    cursor: pointer;
+}
+
+.items-grid li span {
+    margin-top: 12px;
+
+    flex: 1;
+    display: flex;
+    align-items: center;
+
+    color: var(--title-color);
+}
+
+.items-grid li.selected {
+    background: #e1faec;
+    border: 2px solid #34cb79;
+}
+
+.items-grid li img,
+.items-grid li span {
+    pointer-events: none;
 }
