--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -91,3 +91,16 @@
 #modal form button:hover {
     background-color: #2fb85e;
 } 
+
+/* Para o modal point-created */
+#modal.point .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#modal.point h1 {
+    color: #ffffff;
+
+    margin-top: 32px;
+}
