--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -1,11 +1,16 @@
+body {
+    background-color: #ffffff;
+}
+
 body::after {
     content: "";
-    position: fixed;
-    background-color: #ffffff;
-    top: 260px;
+    position: absolute;
+    background-color: #f0f0f5;
+    top: 0px;
     left: 0;
     right: 0;
     bottom: 0;
+    height: 16rem;
     z-index: -1;
 }
 
@@ -54,6 +59,15 @@ main .cards {
     grid-template-columns: 1fr 1fr 1fr;
 
     gap: 24px;
+}
+
+main .card {
+    border: 1px solid #f0f0f5;
+    border-radius: 8px;
+
+    text-align: center;
+
+    padding-bottom: 20px;
 }
 
 main .card img {
